# Agentes-test

./: .dockerignore  .gitignore  README.md  dockerfile  environment.yml  main.py  problemaResolver.txt  pyproject.toml
app/: main.py
app/agents/: evaluaciones.py  feedback.py  formato.py  revisores.py
app/pipeline/: grafo.py
app/utils/: carga.py  html_exporter.py  pdf_exporter.py
